--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<button type="button" id="btn"></button>
+	<button type="button" id="btn">Submit</button>
 
 </body>
 
