--- a/main.html
+++ b/main.html
@@ -4,6 +4,23 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+
+		#btn{
+	border:none;
+	background-color:black;
+	color:white;
+	border-radius:5px;
+	
+}
+#btn:hover{
+	
+	background-color:yellow;
+	color:black;
+	border-radius:30px;
+}
+
+	</style>
 </head>
 
 <body>
@@ -11,7 +28,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<button type="button" id="btn">Submit button</button>
+	<button id="btn">Submit button</button>
 
 </body>
 
