--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<button id="btn">Submit button</button>
+	<button id="btn" type="button">Submit button</button>
 
 </body>
 
