--- a/main.html
+++ b/main.html
@@ -4,23 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<style>
-
-		#btn{
-	border:none;
-	background-color:black;
-	color:white;
-	border-radius:5px;
 	
-}
-#btn:hover{
-	
-	background-color:yellow;
-	color:black;
-	border-radius:30px;
-}
-
-	</style>
 </head>
 
 <body>
@@ -28,7 +12,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<button id="btn" type="button">Submit button</button>
+	<button id="btn" type="button">Submit</button>
+	<submit></submit>
+	
 
 </body>
 
