--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<button id="btn" type="button">submit</button>
+	<button id="btn" type="submit">submit</button>
 	<submit></submit>
 	
 
