--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 </script>
 
 	<button id="btn" type="submit">submit</button>
-	<submit></submit>
+	<input id="btn" type="button" placeholder="submit">
 	
 
 </body>
