--- a/main.html
+++ b/main.html
@@ -13,7 +13,8 @@
 </script>
 
 	
-	<input id="btn" type="button" placeholder="submit">
+	
+	<button id="btn" type="submit">submit</button>
 	
 
 </body>
